uppdateringar till docker compose filer och kopplingar till eC2, samt nya bilder

--- a/manualAppProject/api/docker-compose.yml
+++ b/manualAppProject/api/docker-compose.yml
@@ -1,26 +1,40 @@
+version: '3.8'
 services:
   db:
     image: postgres:16
+    container_name: postgres_db_man
+    env_file:
+      - .env
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: Parkour2025
-      POSTGRES_DB: dbmanualweb
-
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${PASSWORD}
+      POSTGRES_DB: ${DATABASE}
     ports:
-      - "5444:5432"
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/dbmanualweb
 
   api:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: ManualApi_app
+    environment:
+      POSTGRES_USER: ${USER}
+      POSTGRES_PASSWORD: ${PASSWORD}
+      POSTGRES_DB: ${DATABASE}
+      HOST: db
+    env_file:
+      - .env
     depends_on:
       - db
-    environment:
-      DATABASE_URL: postgres://testuser:testpassword@db:5432/dbmanualweb
     ports:
       - "8000:8000"
+    volumes:
+      - /etc/ssl/certs/cert.pem:/app/cert.pem
+      - /etc/ssl/private/key.pem:/app/key.pem
     command: >
-      sh -c "sleep 10 && python setup.py && uvicorn main:app --host 0.0.0.0 --port 8000"
+      sh -c "sleep 10 && python setup.py && uvicorn main:app --host 0.0.0.0 --port 443 --ssl-keyfile=/app/key.pem --ssl-certfile=/app/cert.pem"
 
 volumes:
   postgres_data:
