--- a/manualAppProject/api/Dockerfile
+++ b/manualAppProject/api/Dockerfile
@@ -1,11 +1,18 @@
 FROM python:3.12-slim
 
-# Set environment variables
+# Set working directory
+WORKDIR /app
+
+# Set environment variables ??
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-# Set work directory
-WORKDIR /app
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    libpq-dev \
+    gcc \
+    && rm -rf /var/lib/apt/lists/*
+
 
 # Install dependencies
 COPY requirements.txt /app/
@@ -13,6 +20,11 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy project
 COPY . /app/
+
+
+# Expose the port your app runs on
+EXPOSE 8000
+
 
 # Run the setup script to create tables and insert dummy data
 CMD ["sh", "-c", "python setup.py && uvicorn main:app --host 0.0.0.0 --port 8000"]
