--- a/manualAppProject/package.json
+++ b/manualAppProject/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.1",
+    "axios": "^1.8.4",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.483.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.4",
-    "sort-by": "^1.2.0",
+    "sort-by": "^0.0.2",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
