--- a/manualAppProject/ny_db_SQLA/docker-compose.yml
+++ b/manualAppProject/ny_db_SQLA/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     ports:
       - "8000:8000"
     command: >
-      sh -c "sleep 10 && cd app && python setup.py && uvicorn main:app --host 0.0.0.0 --port 8000"
+      sh -c "sleep 10 && python setup.py && uvicorn main:app --host 0.0.0.0 --port 8000"
     restart: unless-stopped
 
   nginx:
